# compare-your-models

./: .env.example  .gitignore  ARCHITECTURE.md  DATASET_STRUCTURE.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT_VISION.md  QUICKSTART.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/tasks/easy/: task_001_reverse_string.json  task_002_sum_list.json  task_003_find_max.json
benchmarks/tasks/medium/: task_001_binary_search.json
src/: main.py
src/dataset/: loader.py  models.py
src/execution/: executor.py
src/models/: anthropic_provider.py  base.py  openai_provider.py
src/scoring/: scorer.py
